--- a/feed-a.html
+++ b/feed-a.html
@@ -63,15 +63,16 @@
 
         .tab-group {
             display: flex;
-            gap: 10px;
-            margin: 20px 0 28px;
+            gap: 15px;
+            margin: 120px 0 50px;
         }
 
         .tab {
-            min-width: 80px;
-            padding: 6px 18px;
+            flex: 1;
+            max-width: 15wlrma 0px;
+            padding: 8px 24px;
             border-radius: 16px;
-            font-size: 14px;
+            font-size: 16px;
             font-family: 'esamanruMedium', sans-serif;
             background-color: var(--gray);
             color: var(--white);
@@ -84,25 +85,26 @@
 
         .section {
             padding: 6px 2px;
-            margin-bottom: 28px;
+            margin-bottom: px;
         }
 
         .section-title {
             font-family: 'esamanruMedium', sans-serif;
-            font-size: 20px;
+            font-size: 28px;
+            margin-top: 200px;
             margin-bottom: 14px;
         }
 
         .section-subtitle {
             color: var(--gray);
-            font-size: 14px;
-            margin-bottom: 6px;
+            font-size: 24px;
+            margin-bottom: 12px;
         }
 
         .headline {
             font-family: 'esamanruMedium', sans-serif;
-            font-size: 32px;
-            margin-bottom: 14px;
+            font-size: 44px;
+            margin-bottom: 22px;
         }
 
         .headline span {
@@ -112,9 +114,9 @@
         .bullet-list {
             list-style: none;
             display: grid;
-            gap: 8px;
+            gap: 4px;
             color: var(--gray);
-            font-size: 14px;
+            font-size: 22px;
         }
 
         .bullet-list li::before {
@@ -133,24 +135,25 @@
 
         .pattern-card {
             background: var(--white);
-            border-radius: 26px;
+            border-radius: 40px;
             padding: 22px;
-            border: 1px solid #eceff3;
+            border: 1px solid rgba(17, 17, 17, 0.06);
             text-align: center;
-            min-height: 110px;
+            min-height: 210px;
             display: flex;
             flex-direction: column;
             justify-content: center;
-            gap: 8px;
+            gap: 20px;
+            box-shadow: 0 8px 18px rgba(0, 0, 0, 0.05);
         }
 
         .pattern-card span {
-            font-size: 13px;
+            font-size: 28px;
             color: var(--gray);
         }
 
         .pattern-card strong {
-            font-size: 18px;
+            font-size: 38px;
             font-family: 'esamanruMedium', sans-serif;
             color: var(--violet);
         }
@@ -160,108 +163,132 @@
         }
 
         .cta-chip {
-            margin-top: 18px;
+            margin-top: 40px;
             width: 100%;
             background-color: #a5a5a5;
             color: var(--white);
             border-radius: 18px;
             padding: 10px 16px;
             text-align: center;
-            font-size: 13px;
+            font-size: 16px;
         }
 
         .ranking-title {
             font-family: 'esamanruMedium', sans-serif;
-            font-size: 20px;
-            margin-bottom: 20px;
+            font-size: 28px;
+            margin-top: 200px;
+            margin-bottom: 30px;
         }
 
         .ranking-item {
             display: grid;
-            grid-template-columns: 1fr 220px;
-            gap: 12px;
-            align-items: center;
+            grid-template-columns: auto 1fr 300px;
+            gap: 24px;
+            align-items: start;
+            margin-top: 0px;
+        }
+
+        .ranking-content {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .ranking-item>.map-placeholder {
+            align-self: stretch;
+            height: auto;
+            margin-top: 84px;
         }
 
         .ranking-card {
             background-color: var(--white);
-            border-radius: 22px;
-            padding: 18px 20px;
-            margin-bottom: 16px;
-            box-shadow: 0 10px 24px rgba(17, 17, 17, 0.04);
+            border-radius: 30px;
+            padding: 30px 30px;
+            margin-bottom: 30px;
+            border: 1px solid rgba(17, 17, 17, 0.06);
+            box-shadow: 0 10px 24px rgba(0, 0, 0, 0.06);
         }
 
         .ranking-label {
             font-family: 'esamanruMedium', sans-serif;
             color: var(--black);
-            font-size: 20px;
-            margin-right: 14px;
+            font-size: 24px;
             white-space: nowrap;
+
         }
 
         .ranking-header {
-            display: flex;
-            align-items: baseline;
-            gap: 10px;
-            margin-bottom: 8px;
+            margin-bottom: 14px;
         }
 
         .ranking-name {
             font-family: 'esamanruMedium', sans-serif;
             color: var(--violet);
-            font-size: 20px;
-            margin-bottom: 0;
+            font-size: 24px;
+            margin-bottom: 0px;
         }
 
         .ranking-desc {
             color: var(--gray);
-            font-size: 14px;
+            font-size: 16px;
+            margin-bottom: 4px;
         }
 
         .metrics {
             display: flex;
-            gap: 12px;
-            margin: 16px 0 14px;
+            gap: 14px;
+            margin: 24px 0 20px;
         }
 
         .metric-chip {
             background-color: #f4f5f7;
             color: var(--gray);
-            border-radius: 24px;
-            padding: 12px 18px;
-            font-size: 12px;
-            min-width: 110px;
+            border-radius: 28px;
+            padding: 16px 22px;
+            font-size: 16px;
+            flex: 1;
+            min-height: 150px;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-family: 'esamanruMedium', sans-serif;
         }
 
         .metric-chip strong {
             display: block;
-            margin-top: 4px;
+            margin-top: 6px;
             font-family: 'esamanruMedium', sans-serif;
             color: var(--black);
+            font-size: 22px;
         }
 
         .metric-chip.orange strong {
             color: var(--orange);
         }
 
+        .metric-chip.violet strong {
+            color: var(--violet);
+        }
+
+
         .cta-button {
-            display: inline-block;
-            margin-top: 6px;
+            display: block;
+            margin-top: 5px;
             background-color: var(--violet);
             color: var(--white);
-            border-radius: 26px;
-            padding: 12px 18px;
-            font-size: 14px;
+            border-radius: 22px;
+            padding: 12px 22px;
+            font-size: 16px;
             font-family: 'esamanruMedium', sans-serif;
             text-decoration: none;
-            min-width: 100%;
+            width: 100%;
             text-align: center;
+            box-sizing: border-box;
         }
 
         .map-placeholder {
-            width: 220px;
-            height: 180px;
+            width: 100%;
             border-radius: 18px;
             background: #eef1f5;
             display: flex;
@@ -277,25 +304,32 @@
 
         .secondary-header {
             font-family: 'esamanruMedium', sans-serif;
-            font-size: 20px;
-            margin-bottom: 6px;
+            font-size: 28px;
+            margin-top: 160px;
+            margin-bottom: 14px;
         }
 
         .secondary-sub {
             color: var(--light-gray);
-            font-size: 14px;
-            margin-bottom: 18px;
+            font-size: 24px;
+            margin-bottom: 30px;
         }
 
         .bottom-banner {
-            margin-top: 40px;
+            margin-top: 100px;
             background-color: var(--violet);
             color: var(--white);
-            border-radius: 22px;
-            padding: 30px;
+            font-size: 24px;
+            border-radius: 25px;
+            padding: 0px 20px;
             text-align: center;
             font-family: 'esamanruMedium', sans-serif;
             line-height: 1.5;
+            min-height: 220px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
 
         @media (max-width: 960px) {
@@ -332,7 +366,7 @@
 
         <section class="section">
             <div class="section-subtitle">당신의 주거 선택 선호도는?</div>
-            <div class="headline">역 <span>가까운 게</span> 우선</div>
+            <div class="headline">역 가까운 게 우선</div>
             <ul class="bullet-list">
                 <li>출퇴근이랑 이동 시간 줄이는 게 중요함</li>
                 <li>집은 좀 커야 할 것 같은데, 고민중</li>
@@ -367,59 +401,59 @@
 
             <div class="ranking-card">
                 <div class="ranking-item">
+                    <span class="ranking-label">TOP 1</span>
                     <div>
                         <div class="ranking-header">
-                            <span class="ranking-label">TOP 1</span>
                             <span class="ranking-name">서울시 광진구 자양동, 자양로 2길 일대</span>
                         </div>
-                    <div class="ranking-desc">건대입구역 인접, 주거·상업 혼합 지역</div>
-                    <div class="metrics">
-                        <div class="metric-chip">지하철역 접근성<strong>최고</strong></div>
-                        <div class="metric-chip">주민 노후도<strong>적정</strong></div>
-                        <div class="metric-chip orange">주택 가격<strong>다소 비쌈</strong></div>
+                        <div class="ranking-desc">건대입구역 인접, 주거·상업 혼합 지역</div>
+                        <div class="metrics">
+                            <div class="metric-chip violet">지하철역 접근성<strong>최고</strong></div>
+                            <div class="metric-chip">주민 노후도<strong>적정</strong></div>
+                            <div class="metric-chip orange">주택 가격<strong>다소 비쌈</strong></div>
+                        </div>
+                        <a href="#" class="cta-button">영상으로 살펴보기</a>
                     </div>
-                    <a href="#" class="cta-button">영상으로 살펴보기</a>
+                    <div class="map-placeholder">MAP PREVIEW</div>
                 </div>
-                <div class="map-placeholder">MAP PREVIEW</div>
-            </div>
             </div>
 
             <div class="ranking-card">
                 <div class="ranking-item">
+                    <span class="ranking-label">TOP 2</span>
                     <div>
                         <div class="ranking-header">
-                            <span class="ranking-label">TOP 2</span>
                             <span class="ranking-name">서울시 서대문구, 충정로 일대</span>
                         </div>
-                    <div class="ranking-desc">광로 도심 접근성이 뛰어난 업무·주거 혼합 지역</div>
-                    <div class="metrics">
-                        <div class="metric-chip">지하철역 접근성<strong>최고</strong></div>
-                        <div class="metric-chip">주민 노후도<strong>적정</strong></div>
-                        <div class="metric-chip orange">주택 가격<strong>다소 비쌈</strong></div>
+                        <div class="ranking-desc">광로 도심 접근성이 뛰어난 업무·주거 혼합 지역</div>
+                        <div class="metrics">
+                            <div class="metric-chip violet">지하철역 접근성<strong>최고</strong></div>
+                            <div class="metric-chip">주민 노후도<strong>적정</strong></div>
+                            <div class="metric-chip orange">주택 가격<strong>다소 비쌈</strong></div>
+                        </div>
+                        <a href="#" class="cta-button">영상으로 살펴보기</a>
                     </div>
-                    <a href="#" class="cta-button">영상으로 살펴보기</a>
+                    <div class="map-placeholder">MAP PREVIEW</div>
                 </div>
-                <div class="map-placeholder">MAP PREVIEW</div>
-            </div>
             </div>
 
             <div class="ranking-card">
                 <div class="ranking-item">
+                    <span class="ranking-label">TOP 3</span>
                     <div>
                         <div class="ranking-header">
-                            <span class="ranking-label">TOP 3</span>
                             <span class="ranking-name">서울시 강동구 천호동, 천호역 부근</span>
                         </div>
-                    <div class="ranking-desc">강동권 교통 거점에 위치한 주거 중심 지역</div>
-                    <div class="metrics">
-                        <div class="metric-chip">지하철역 접근성<strong>최고</strong></div>
-                        <div class="metric-chip">주민 노후도<strong>적정</strong></div>
-                        <div class="metric-chip orange">주택 가격<strong>다소 비쌈</strong></div>
+                        <div class="ranking-desc">강동권 교통 거점에 위치한 주거 중심 지역</div>
+                        <div class="metrics">
+                            <div class="metric-chip violet">지하철역 접근성<strong>최고</strong></div>
+                            <div class="metric-chip">주민 노후도<strong>적정</strong></div>
+                            <div class="metric-chip orange">주택 가격<strong>다소 비쌈</strong></div>
+                        </div>
+                        <a href="#" class="cta-button">영상으로 살펴보기</a>
                     </div>
-                    <a href="#" class="cta-button">영상으로 살펴보기</a>
+                    <div class="map-placeholder">MAP PREVIEW</div>
                 </div>
-                <div class="map-placeholder">MAP PREVIEW</div>
-            </div>
             </div>
         </section>
 
@@ -429,40 +463,40 @@
 
             <div class="ranking-card">
                 <div class="ranking-item">
+                    <span class="ranking-label">근거리</span>
                     <div>
                         <div class="ranking-header">
-                            <span class="ranking-label">근거리</span>
                             <span class="ranking-name">광명시 철산동 역세권</span>
                         </div>
-                    <div class="ranking-desc">건대입구역과 접근성이 아주 뛰어남</div>
-                    <div class="metrics">
-                        <div class="metric-chip">지하철역 접근성<strong>최고</strong></div>
-                        <div class="metric-chip">주민 노후도<strong>적정</strong></div>
-                        <div class="metric-chip orange">주택 가격<strong>다소 비쌈</strong></div>
+                        <div class="ranking-desc">건대입구역과 접근성이 아주 뛰어남</div>
+                        <div class="metrics">
+                            <div class="metric-chip violet">지하철역 접근성<strong>최고</strong></div>
+                            <div class="metric-chip">주민 노후도<strong>적정</strong></div>
+                            <div class="metric-chip orange">주택 가격<strong>다소 비쌈</strong></div>
+                        </div>
+                        <a href="#" class="cta-button">영상으로 살펴보기</a>
                     </div>
-                    <a href="#" class="cta-button">영상으로 살펴보기</a>
+                    <div class="map-placeholder">MAP PREVIEW</div>
                 </div>
-                <div class="map-placeholder">MAP PREVIEW</div>
-            </div>
             </div>
 
             <div class="ranking-card">
                 <div class="ranking-item">
+                    <span class="ranking-label">근거리</span>
                     <div>
                         <div class="ranking-header">
-                            <span class="ranking-label">근거리</span>
                             <span class="ranking-name">광명시 철산동 역세권</span>
                         </div>
-                    <div class="ranking-desc">건대입구역과 접근성이 아주 뛰어남</div>
-                    <div class="metrics">
-                        <div class="metric-chip">지하철역 접근성<strong>최고</strong></div>
-                        <div class="metric-chip">주민 노후도<strong>적정</strong></div>
-                        <div class="metric-chip orange">주택 가격<strong>다소 비쌈</strong></div>
+                        <div class="ranking-desc">건대입구역과 접근성이 아주 뛰어남</div>
+                        <div class="metrics">
+                            <div class="metric-chip violet">지하철역 접근성<strong>최고</strong></div>
+                            <div class="metric-chip">주민 노후도<strong>적정</strong></div>
+                            <div class="metric-chip orange">주택 가격<strong>다소 비쌈</strong></div>
+                        </div>
+                        <a href="#" class="cta-button">영상으로 살펴보기</a>
                     </div>
-                    <a href="#" class="cta-button">영상으로 살펴보기</a>
+                    <div class="map-placeholder">MAP PREVIEW</div>
                 </div>
-                <div class="map-placeholder">MAP PREVIEW</div>
-            </div>
             </div>
         </section>
 
