--- a/feed-a.html
+++ b/feed-a.html
@@ -69,7 +69,7 @@
 
         .tab {
             flex: 1;
-            max-width: 15wlrma 0px;
+            max-width: 150px;
             padding: 8px 24px;
             border-radius: 16px;
             font-size: 16px;
